Testing scrollbar fix

--- a/anorth-deca/src/app/main/page.module.css
+++ b/anorth-deca/src/app/main/page.module.css
@@ -771,6 +771,15 @@
   cursor: pointer;
 
 }
+.answerchoicetxt {
+  overflow: auto;             /* allow scrolling */
+  -ms-overflow-style: none;   /* hide scrollbar in IE and Edge */
+  scrollbar-width: none;      /* hide scrollbar in Firefox */
+}
+
+.answerchoicetxt::-webkit-scrollbar {
+  display: none;              /* hide scrollbar in Chrome, Safari, Opera */
+}
 @media (max-width: 1366px) {
   .testtitleNA {
     font-size: 3.2rem; /* 4rem * 0.8 */
