--- a/anorth-deca/src/css/analyticspage.module.css
+++ b/anorth-deca/src/css/analyticspage.module.css
@@ -518,6 +518,15 @@
   /* right: 1rem; */
 
 }
+.answerchoicetxt {
+  overflow: auto;             /* allow scrolling */
+  -ms-overflow-style: none;   /* hide scrollbar in IE and Edge */
+  scrollbar-width: none;      /* hide scrollbar in Firefox */
+}
+
+.answerchoicetxt::-webkit-scrollbar {
+  display: none;              /* hide scrollbar in Chrome, Safari, Opera */
+}
 /* MAIN PAGE WRAPPER */
 /* .analyticspagediv {
   display: flex;
